--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,12 +4,12 @@ include_directories(${CMAKE_SOURCE_DIR}/libdip)
 include_directories(${CMAKE_SOURCE_DIR}/tsne)
 include_directories(${CMAKE_SOURCE_DIR}/src)
 
-add_executable(testmain 
+add_executable(acdc-test 
 	testmain.cpp
 	SequenceVectorizer.cpp
 	DipStatistic.cpp
 )
 
-target_link_libraries(testmain mainprog tsne dip ${Boost_LIBRARIES} ${SEQAN_LIBRARIES})
+target_link_libraries(acdc-test mainprog tsne dip ${Boost_LIBRARIES} ${SEQAN_LIBRARIES})
 
-add_test(all testmain)
+add_test(all acdc-test)
