--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
 project(acdc)
 enable_testing()
 
-set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_BUILD_TYPE Release)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O2 -std=c++11")
 
@@ -10,19 +10,28 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O2 -std=c++11")
 set(Boost_USE_STATIC_LIBS OFF) 
 set(Boost_USE_MULTITHREADED ON)  
 set(Boost_USE_STATIC_RUNTIME OFF) 
-find_package(Boost 1.55.0 COMPONENTS program_options REQUIRED)
+find_package(Boost 1.55.0 COMPONENTS program_options system REQUIRED)
 include_directories(${Boost_INCLUDE_DIR})
 
 # SeqAn
 set(SEQAN_FIND_DEPENDENCIES ZLIB BZip2)
 find_package(SeqAn REQUIRED)
-include_directories(${SEQAN_INCLUDE_DIRS})
+include_directories(SYSTEM ${SEQAN_INCLUDE_DIRS})
 add_definitions(${SEQAN_DEFINITIONS})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SEQAN_CXX_FLAGS}")
 
 # Eigen
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIRS})
+
+# Crow
+include_directories(SYSTEM "libcrow")
+
+# t-SNE
+include_directories(SYSTEM "libtsne")
+
+# Dip statistic
+include_directories(SYSTEM "libdip")
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
