--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,8 +8,9 @@ add_library(mainprog
 	Kmeans.cpp
 	ClusterAnalysis.cpp
 	Logger.cpp
+	VisualizationServer.cpp
 )
 
 add_executable(acdc main.cpp)
 
-target_link_libraries(acdc mainprog tsne dip ${Boost_LIBRARIES} ${SEQAN_LIBRARIES})
+target_link_libraries(acdc mainprog webserver tsne dip ${Boost_LIBRARIES} ${SEQAN_LIBRARIES})
