--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,4 +13,4 @@ add_library(mainprog
 
 add_executable(acdc main.cpp)
 
-target_link_libraries(acdc mainprog webserver tsne dip ${Boost_LIBRARIES} ${SEQAN_LIBRARIES})
+target_link_libraries(acdc mainprog webserver tsne dip ${Boost_LIBRARIES} ${SEQAN_LIBRARIES} ${JSONCPP_LIBRARY})
