moved nanoflann to own library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,9 @@ include_directories(SYSTEM "libjsoncpp")
 # Seqan library
 include_directories(SYSTEM "libseqan")
 
+# Seqan library
+include_directories(SYSTEM "libnanoflann")
+
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 add_subdirectory(libdip)
