major change of detection strategy

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,14 +7,15 @@ add_library(mainprog
 	BarnesHutSNEAdapter.cpp
 	SequenceVectorizer.cpp
 	Clustering.cpp
+	HierarchicalClustering.cpp
 	TarjansAlgorithm.cpp
 	Kmeans.cpp
 	ClusterAnalysis.cpp
 	Logger.cpp
-	ResultIO.cpp
 	KrakenAdapter.cpp
+	ResultIO.cpp
 )
 
 add_executable(acdc main.cpp)
 
-target_link_libraries(acdc mainprog tsne jsoncpp dip pthread m ${Boost_LIBRARIES} ${JSONCPP_LIBRARY})
+target_link_libraries(acdc mainprog tsne jsoncpp dip pthread fastcluster m ${Boost_LIBRARIES} ${JSONCPP_LIBRARY})
