--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,11 +34,22 @@ include_directories(SYSTEM "libnanoflann")
 # Catch
 include_directories(SYSTEM "libcatch")
 
+# Fastcluster
+include_directories(SYSTEM "libfastcluster")
+
+# OpenMP
+find_package(OpenMP)
+if (OPENMP_FOUND)
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+endif()
+
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 
 add_subdirectory(libdip)
 add_subdirectory(libtsne)
 add_subdirectory(libjsoncpp)
+add_subdirectory(libfastcluster)
 add_subdirectory(src)
 add_subdirectory(test)
 
