First step towards fully automated acdc
- Separated contamination detection and decontamination/clustering
- Removed bootstrap visualization for less complexity

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,8 +8,10 @@ add_library(mainprog
 	SequenceVectorizer.cpp
 	Clustering.cpp
 	HierarchicalClustering.cpp
+	ClusteringUtil.cpp
 	TarjansAlgorithm.cpp
-	ClusterAnalysis.cpp
+	ContaminationDetection.cpp
+	Decontamination.cpp
 	Logger.cpp
 	KrakenAdapter.cpp
 	ResultIO.cpp
