install acdc-make-fastas script to generate fastas from clusters

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,3 +57,5 @@ message(STATUS "CMAKE_INSTALL_PREFIX: " ${CMAKE_INSTALL_PREFIX})
 install(PROGRAMS ${CMAKE_BINARY_DIR}/acdc DESTINATION bin)
 install(DIRECTORY DESTINATION share/acdc)
 install(DIRECTORY share/acdc/ DESTINATION share/acdc)
+install(FILES share/acdc/tools/acdc-make-fastas DESTINATION bin PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ)
+install(FILES share/acdc/tools/acdc-filter-fasta-by-name.awk DESTINATION bin PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ)
